# Hamster

./: .gitignore  .gitmodules  hamster.teros.yml
dossier/: .gitignore  compute_clk_per_tr.py  compute_divide_by_shift.py
dossier/design_doc/: macros.tex  main.tex  pagegarde.sty
dossier/design_doc/introduction/: _intro_top.tex  definition.tex  subseq_def_phase.tex
global_verif/: __init__.py  generic_controller.py  spi_decoder.py
global_verif/drivers/: __init__.py  clock_driver.py  iodriver.py
global_verif/models/: __init__.py  abi_encoder.py
phy/: .gitignore  hamster.py  hamster.sdc
rtl/io/: sky130_fd_io_gpiov2__wrapped_input.sv
rtl/maths/: div.sv
rtl/motor/: encoder_pwm_read.sv  encoder_reader.sv  motor_control_top.sv  pattern_generator.sv  phase_driver.sv  prescaler_finder.sv  speed_loop.sv  speed_meter.sv
rtl/pwm/: pulse_catcher.sv  pwm_capture.sv  pwm_gen_left.sv
rtl/regbank/: hamster_regbank.sv  hamster_regbank_in_if.sv  hamster_regbank_out_if.sv  hamster_regs_map.svh  reg_rdchan_if.sv
rtl/spi/: if_spi.sv  spi_master.sv  spi_slave.sv
rtl/top/: channels_decoder.sv  cmd_decoder.sv  core_top.sv  debug.svh  decoder.svh  spi_rb_interface.sv  timebase.sv
verif/motor/: Makefile  gate.mk  motor.mk  test_motor_control_top.py  waves.gtkw
verif/pwm/: pwm.mk  pwm_capture.py
verif/spi/: Makefile  spi.mk  spi_verif_top.py
verif/top/: Makefile  demo.mk  new_test_top.py  test.gtkw  test_gate.gtkw  test_top.py
verif/verilator/: CMakeLists.txt  sim_main.cpp
verif/verilator/cpp/: clock.cpp  clock.h  dut.cpp  dut.h  event_queue.cpp  event_queue.h  generator.cpp  generator.h  hdltime.h
verif/verilator/cpp/events/: edge.cpp  edge.h  signal_event.h  timer.cpp  timer.h
verif/verilator/cpp/scheduler/: coro_scheduler.cpp  coro_scheduler.h  sim_task_coro.h
verif/verilator/cpp/sim/: spi.cpp  spi.h
(+73 files in other folders)
